# antigravity-workspace-template

./: .gitignore  .mcp.json  INSTALL.md  README.md  README_CN.md  README_ES.md  llms.txt  mission.md
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
cli/: pyproject.toml
commands/: ag-ask.md  ag-init.md  ag-refresh.md  setup.md
docs/en/: README.md  TROUBLESHOOTING.md
docs/es/: README.md
docs/zh/: README.md
engine/: pyproject.toml
engine/antigravity_engine/: __init__.py
engine/antigravity_engine/hub/: mcp_server.py  refresh_pipeline.py
engine/tests/: test_hub_pipeline.py  test_install_engine_hook.py  test_mcp_server_errors.py  test_plugin_packaging.py
hooks/: install_engine.py
memory/: agent_summary.md
openspec/changes/2026-01-09-add-sandbox-execution/specs/sandbox/: spec.md
