[project]
name = "antigravity-engine"
version = "0.2.0"
description = "Multi-agent repository knowledge engine and MCP server for AI coding agents"
requires-python = ">=3.10"
keywords = [
    "ai-coding",
    "ai-ide",
    "claude-code",
    "codex-cli",
    "mcp-server",
    "multi-agent",
    "repository-qa",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "python-dotenv>=1.0,<2",
    "requests>=2.33.0,<3",
    "mcp[cli]>=1.0.0,<2",
    "openai-agents[litellm]>=0.12,<0.15",
]

[project.urls]
Homepage = "https://github.com/study8677/antigravity-workspace-template"
Repository = "https://github.com/study8677/antigravity-workspace-template"
Documentation = "https://github.com/study8677/antigravity-workspace-template/tree/main/docs/en"
Issues = "https://github.com/study8677/antigravity-workspace-template/issues"

[project.scripts]
ag-ask = "antigravity_engine._cli_entry:ask_main"
ag-refresh = "antigravity_engine._cli_entry:refresh_main"
ag-mcp = "antigravity_engine.hub.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["antigravity_engine"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
